--- a/force-app/main/default/classes/LineItemTriggerHandler.cls
+++ b/force-app/main/default/classes/LineItemTriggerHandler.cls
@@ -3,7 +3,8 @@ public class LineItemTriggerHandler {
     private static Map<Id, Product__c> productAvailableAmounts {get; set;}
 
     public static void onBeforeInsert(List<Line_Item__c> lineItems) {
-        checkAvaliableAmountError(lineItems);
+        setNames(lineItems);
+        checkQuantityAndAvaliableAmount(lineItems);
     }
 
     public static void onAfterInsert(Map<Id, Line_Item__c> oldLineItemsMap, List<Line_Item__c> newLineItems) {
@@ -11,7 +12,7 @@ public class LineItemTriggerHandler {
     }
 
     public static void onBeforeUpdate(List<Line_Item__c> lineItems) {
-        checkAvaliableAmountError(lineItems);
+        checkQuantityAndAvaliableAmount(lineItems);
     }
 
     public static void onAfterUpdate(Map<Id, Line_Item__c> oldLineItemsMap, List<Line_Item__c> newLineItems) {
@@ -19,6 +20,10 @@ public class LineItemTriggerHandler {
     }
 
     private static void fillProductsAvailableAmounts(List<Line_Item__c> lineItems) {
+        if (productAvailableAmounts != null) {
+            return;
+        }
+
         List<Id> productIds = new List<Id>();
         for (Line_Item__c lineItem : lineItems) {
             productIds.add(lineItem.Product__c);
@@ -31,20 +36,35 @@ public class LineItemTriggerHandler {
         ]);
     }
 
-    private static void checkAvaliableAmountError(List<Line_Item__c> lineItems) {
-        if (productAvailableAmounts == null) {
-            fillProductsAvailableAmounts(lineItems);            
+    private static void setNames(List<Line_Item__c> lineItems) {
+        fillProductsAvailableAmounts(lineItems);
+
+        for(Line_Item__c lineItem : lineItems) {
+            lineItem.Name = GroceryServices.generateRecordName(
+                'Line_Item__c',
+                productAvailableAmounts.get(lineItem.Product__c).Name
+            );
         }
+    }
+
+    private static void checkQuantityAndAvaliableAmount(List<Line_Item__c> lineItems) {
+        fillProductsAvailableAmounts(lineItems);
 
         for (Line_Item__c lineItem : lineItems) {
             if (lineItem.Quantity__c > productAvailableAmounts.get(lineItem.Product__c).Available_Amount__c) {
                 lineItem.Quantity__c.addError('Not available amount of ' + productAvailableAmounts.get(lineItem.Product__c).Name);
             }
+
+            if ((lineItem.Quantity__c <= 0)||(lineItem.Quantity__c == null)) {
+                lineItem.Quantity__c.addError('Quantity must be greater than zero.');
+            }
         }
     }
 
     private static void updateProductAvaliableAmount(Map<Id, Line_Item__c> oldLineItemsMap, List<Line_Item__c> newLineItems) {
+        fillProductsAvailableAmounts(newLineItems);
         List<Product__c> productsForUpdate = new List<Product__c>();
+
         for (Line_Item__c lineItem : newLineItems) {
 
             Double oldQuantity;
